# OOP-labs3

./: CMakeLists.txt  Dockerfile  README.md
.devcontainer/: devcontainer.json
include/: Figure.h  Octagon.h  Square.h  Triangle.h
src/: Figure.cpp  Octagon.cpp  Square.cpp  Triangle.cpp  main.cpp
tests/: test_figures.cpp
